# taxi-analytics

./: .gitignore  Clickhouse.sql  README.md  download_taxi_data.ps1
.github/: copilot-instructions.md
.github/prompts/: data_analyst.prompt.md
notebooks/: playground.ipynb  requirements.txt  setup_environment.ipynb
taxi_python/: README.md  main.py  pyproject.toml  uploader.py
taxi_rust/: Cargo.toml
taxi_rust/src/: main.rs
